Updated, I don't know what

--- a/ghostty/config
+++ b/ghostty/config
@@ -1,19 +1,20 @@
-
-font-family = JetBrains Mono 
+# font-family = JetBrains Mono
+font-family = IBM Plex Mono
 window-padding-x = 8
 window-padding-y = 6
 window-padding-balance =true 
 shell-integration-features = no-cursor
 cursor-style=block
-adjust-cell-height=-3
-confirm-close-surface = false
+adjust-cell-height=-1
+confirm-close-surface = true
 clipboard-read = allow
 clipboard-write = allow
 copy-on-select = true
 mouse-hide-while-typing = true
-font-size = 10
-font-style = Regular 
-# theme = catppuccin-mocha
-theme = /home/shivank/.config/ghostty/ghostty-theme
-# theme =Solarized Dark Higher Contrast 
-background-opacity = 0.9
+font-size = 11
+font-style = Regular
+# theme = /home/shivank/.config/ghostty/ghostty-theme
+theme = "Solarized Dark - Patched"
+background-opacity = 0.8
+background-blur-radius = 20
+background = #031219
