--- a/hypr/configs/settings.conf
+++ b/hypr/configs/settings.conf
@@ -68,8 +68,8 @@ disable_while_typing = true
 
 
 binds {
-  workspace_back_and_forth=1
-  allow_workspace_cycles=1
+  workspace_back_and_forth=0
+  allow_workspace_cycles=0
   pass_mouse_when_bound=0
 }
 
@@ -106,11 +106,12 @@ decoration {
 
   blur {
   enabled = true
-  size = 5
+  size = 8
   passes = 3
+  noise = 0
   ignore_opacity = true
   new_optimizations = true
-        vibrancy = 0.1696
+  vibrancy = 0.1696
   }
 
 }
