--- a/hypr/configs/startup.conf
+++ b/hypr/configs/startup.conf
@@ -21,7 +21,7 @@ exec-once = waybar &
 exec-once = nm-applet &
 exec-once = blueman-applet &
 exec-once = hypridle &
-exec-once = connectwifi.sh &
+# exec-once = connectwifi.sh &
 # exec-once = /usr/bin/emacs --daemon &
 # exec-once = kclockd &
 exec-once = swaync &
