--- a/hypr/configs/variables.conf
+++ b/hypr/configs/variables.conf
@@ -56,8 +56,8 @@ $terminal = ghostty
 $bordercolor3 = rgba(df6078FF) rgba(df6078FF) 45deg # pinkish
 $bordercolor2 =$color3
 $bordercolor = $color2
-$browser = brave
-$fileManager = thunar
+$browser = brave 
+$fileManager = nemo 
 $menu = rofi -show drun
 $emacs = emacsclient -c -a 'emacs' # The space at the end is IMPORTANT!
 $reset = hyprctl dispatch submap reset && #use a variable to keep things more readable
