--- a/hypr/configs/window_rules.conf
+++ b/hypr/configs/window_rules.conf
@@ -46,7 +46,7 @@ windowrulev2=move 72% 7%,title:^(Picture-in-Picture)$
 
 # Example windowrule v2
 #Opacity for all windows
-windowrulev2 = opacity 0.85,class:.*
+windowrulev2 = opacity 0.8,class:.*
 windowrulev2 = opacity 1,class:vlc
 windowrulev2 = opacity 1,title:Fake-Lock-Screen
 windowrulev2 = opacity 1,class:mpv
@@ -68,6 +68,8 @@ windowrulev2 = noborder,class:(?i)conky
 
 # ghostty related setting
 windowrulev2 = opacity 1,class:com.mitchellh.ghostty
+windowrulev2 = opacity 1,class:kitty
+
 
 
 windowrulev2 = float,class:^(tasty.javafx.launcher.LauncherFxApp)$,title:^(tastytrade)$
