--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,7 +2,7 @@ include ./theme.conf
 
 # Font
 font_size        10
-font_family      JetBrains Mono Medium 
+font_family      JetBrains Mono Regular 
 bold_font        JetBrains Mono Bold
 italic_font      JetBrains Mono Italic
 bold_italic_font JetBrains Mono Bold Italic
@@ -10,18 +10,18 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-adjust_line_height -3
+adjust_line_height -1
 adjust_column_width 0
 adjust_baseline 0
 text_composition_strategy platform
 
 enable_audio_bell no
 cursor_trail 0
-background_opacity 1 
+background_opacity 0.9
 #hide_window_decorations yes
 confirm_os_window_close 0
 shell_integration  no-cursor
-window_padding_width 0 6 0 6
+window_padding_width 4 6 4 6
 map ctrl+n send_text normal,application nvim\r 
 
 
