--- a/kitty/theme.conf
+++ b/kitty/theme.conf
@@ -1,43 +1,43 @@
-foreground            #cdd6f4
-background            #161622
-selection_foreground  #cdd6f4
-selection_background   #f2cdcd
-url_color             #a6e3a1
+foreground            #839496
+background            #00141a
+selection_foreground  #839496
+selection_background   #d33682
+url_color             #859900
 # black
-color0                #161622
-color8                #fab387
+color0                #00141a
+color8                #cb4b16
 # red
-color1                #f38ba8
-color9                #f38ba8
+color1                #dc322f
+color9                #dc322f
 # green
-color2                #89b4fa
-color10               #89b4fa
+color2                #268bd2
+color10               #268bd2
 # yellow
-color3                #b4befe
-color11               #b4befe
+color3                #b58900
+color11               #b58900
 # blue
-color4                #cba6f7
-color12               #cba6f7
+color4                #6c71c4
+color12               #6c71c4
 # magenta
-color5                #eba0ac
-color13               #eba0ac
+color5                #dc322f
+color13               #dc322f
 # cyan
-color6                #a6e3a1
-color14               #a6e3a1
+color6                #859900
+color14               #859900
 # white
-color7                #cdd6f4
-color15               #cdd6f4
+color7                #839496
+color15               #839496
 # Cursor colors
-cursor                #F712FF
-cursor_text_color     #F712FF
+cursor                #93a1a1
+cursor_text_color     #93a1a1
 # Tab bar colors
-active_tab_foreground  #161622
-active_tab_background   #89b4fa
-inactive_tab_foreground #a6e3a1
-inactive_tab_background #161622
+active_tab_foreground  #00141a
+active_tab_background   #268bd2
+inactive_tab_foreground #859900
+inactive_tab_background #00141a
 # Marks
-mark1_foreground      #161622
-mark1_background      #f38ba8
+mark1_foreground      #00141a
+mark1_background      #dc322f
 # Splits/Windows
-active_border_color   #cba6f7
-inactive_border_color  #161622
+active_border_color   #6c71c4
+inactive_border_color  #00141a
