--- a/tmux/statusline.conf
+++ b/tmux/statusline.conf
@@ -11,9 +11,10 @@ set -g status "on"
 set -g status-interval 1
 set -g status-justify "left"
 
-set -g status-style "fg=#586e75,bg=#073642"
 
-set -g status-bg "#002b36"
+# set -g status-bg "#002b36"
+# set -g status-style "fg=#586e75,bg=#031219" # uncomment this line to set a background and foreground
+set -g status-bg default # default -> allow terminal to set background
 
 set -g status-left-length "100"
 set -g status-right-length "100"
@@ -21,11 +22,11 @@ set -g status-right-length "100"
 set -g status-left-style NONE
 set -g status-right-style NONE
 
-set -g status-left "#[fg=#073642,bg=#eee8d5,bold] #S #[fg=#eee8d5,bg=#93a1a1,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#93a1a1,bold]  #(whoami) #[fg=#93a1a1,bg=#002b36]"
-set -g status-right "#[fg=#586e75,bg=#002b36,nobold,nounderscore,noitalics]#[fg=#93a1a1,bg=#586e75]#[fg=#657b83,bg=#586e75,nobold,nounderscore,noitalics]#[fg=#93a1a1,bg=#657b83]#[fg=#93a1a1,bg=#657b83,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#93a1a1,bold] #(uptime -p)"
+set -g status-left "#[fg=#073642,bold]#{?client_prefix,#[bg=#586e75],#[bg=#eee8d5]} #S #{?client_prefix,#[fg=#586e75],#[fg=#eee8d5]}#[bg=#93a1a1,nobold,nounderscore,noitalics] #[fg=#93a1a1,bg=#031219]"
+set -g status-right "#[fg=#586e75,bg=#031219,nobold,nounderscore,noitalics]#[fg=#93a1a1,bg=#586e75]#[fg=#657b83,bg=#586e75,nobold,nounderscore,noitalics]#[fg=#93a1a1,bg=#657b83]#[fg=#93a1a1,bg=#657b83,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#93a1a1,bold] #{b:pane_current_path} "
 
-setw -g window-status-activity-style "underscore,fg=#839496,bg=#002b36"
+setw -g window-status-activity-style "underscore,fg=#839496,bg=#031219"
 setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#839496,bg=#002b36"
-setw -g window-status-format '#[fg=#002b36,bg=#002b36]#[default] #I  #W #[fg=#002b36,bg=#002b36,nobold,nounderscore,noitalics]'
-setw -g window-status-current-format '#[fg=#002b36,bg=#eee8d5]#[fg=#b58900,bg=#eee8d5] #I #[fg=#eee8d5,bg=#b58900] #W #[fg=#b58900,bg=#002b36,nobold]'
+setw -g window-status-style "NONE,fg=#839496,bg=#031219"
+setw -g window-status-format '#[fg=#031219,bg=#031219]#[default] #I  #{b:pane_current_name} #[fg=#031219,bg=#031219,nobold,nounderscore,noitalics]'
+setw -g window-status-current-format '#[fg=#031219,bg=#eee8d5]#[fg=#b58900,bg=#eee8d5] #I #[fg=#eee8d5,bg=#b58900] #{b:pane_current_path} #[fg=#b58900,bg=#031219,nobold]'
