--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,6 +15,10 @@ set -g set-clipboard on          # use system clipboard
 set -g status-position top       # macOS / darwin style
 set -g mouse on
 
+# Undercurl
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
 #### Key bindings
 
@@ -45,41 +49,9 @@ unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode after dragging w
 #### basic settings
 set-option -g status-justify "left"
 
-# ----------------------------------------------------------------------------
-
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux#v0.3.0'
-
-set -g @catppuccin_flavor 'mocha'
-run-shell "~/.config/tmux/set_tmux_colors.sh"
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_status_modules_left "session"
-
-
-set -g @catppuccin_status_modules_right "application directory uptime date_time"
-  # set -g @catppuccin_directory_text " linkarzu   like   subscribe   "
-# set -g @catppuccin_directory_icon "null"
-# set -g @catppuccin_status_modules_right "null"
-
-# `user` and `host` are kind of useless, dont change when you ssh to devices
-# set -g @catppuccin_status_modules_right "directory user host"
-set -g @catppuccin_status_left_separator " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_connect_separator "no"
-
-# set -g @catppuccin_directory_text "#{pane_current_path}"
-
-# This can be set to "icon" or "all" if set to "all" the entire tmux session
-# name has color
-# set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_fill "all"
-
-# If you set this to off, the tmux line completely dissappears
-set -g @catppuccin_status_default "on"
+# # ----------------------------------------------------------------------------
+#
+# set -g @plugin 'tmux-plugins/tpm'
 
 # allow the title bar to adapt to whatever host you connect to
 set -g set-titles on
@@ -98,6 +70,9 @@ set -g @resurrect-capture-pane-contents 'on'
 unbind 's'
 set -g @sessionx-bind 's'
 set -g @sessionx-filter-current 'false'
+
+source ~/.config/tmux/theme.conf
+source ~/.config/tmux/statusline.conf
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
