Added keybinds to ghostty

--- a/hypr/configs/keybinds.conf
+++ b/hypr/configs/keybinds.conf
@@ -51,6 +51,7 @@ bind = $mainMod, H, movefocus, l
 bind = $mainMod, J, movefocus, d
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, L, movefocus, r
+bind = $mainMod, TAB, cyclenext
 
 # Move window around the stack with SUPER + SHIFT + h/j/k/l
 bind = $mainMod SHIFT, H, movewindow, l
