--- a/hypr/configs/settings.conf
+++ b/hypr/configs/settings.conf
@@ -11,7 +11,6 @@
 # monitor= name, resolution, pos, scale
 
 monitor = eDP-1, 1920x1200, 0x0, 1
-
 # dwindle {
 #   pseudotile = yes
 #   preserve_split = yes
@@ -51,7 +50,7 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options =i
     kb_rules =
 
     follow_mouse = 1
@@ -77,11 +76,6 @@ binds {
 xwayland {
     force_zero_scaling = true
 }
-debug {
-  # Disable watchdog
-  watchdog_timeout = 0
-}
-
 cursor {
     no_hardware_cursors = true
 }
