--- a/tmux/statusline.conf
+++ b/tmux/statusline.conf
@@ -28,5 +28,5 @@ set -g status-right "#[fg=#586e75,bg=#031219,nobold,nounderscore,noitalics]#[
 setw -g window-status-activity-style "underscore,fg=#839496,bg=#031219"
 setw -g window-status-separator ""
 setw -g window-status-style "NONE,fg=#839496,bg=#031219"
-setw -g window-status-format '#[fg=#031219,bg=#031219]#[default] #I  #{b:pane_current_name} #[fg=#031219,bg=#031219,nobold,nounderscore,noitalics]'
-setw -g window-status-current-format '#[fg=#031219,bg=#eee8d5]#[fg=#b58900,bg=#eee8d5] #I #[fg=#eee8d5,bg=#b58900] #{b:pane_current_path} #[fg=#b58900,bg=#031219,nobold]'
+setw -g window-status-format '#[fg=#031219,bg=#031219]#[default] #I  #W #[fg=#031219,bg=#031219,nobold,nounderscore,noitalics]'
+setw -g window-status-current-format '#[fg=#031219,bg=#eee8d5]#[fg=#b58900,bg=#eee8d5] #I #[fg=#eee8d5,bg=#b58900] #W #[fg=#b58900,bg=#031219,nobold]'
