--- a/ghostty/config
+++ b/ghostty/config
@@ -5,16 +5,18 @@ window-padding-y = 6
 window-padding-balance =true 
 shell-integration-features = no-cursor
 cursor-style=block
-adjust-cell-height=-1
+adjust-cell-height=-2
 confirm-close-surface = true
 clipboard-read = allow
 clipboard-write = allow
 copy-on-select = true
 mouse-hide-while-typing = true
-font-size = 11
+font-size = 10
 font-style = Regular
 # theme = /home/shivank/.config/ghostty/ghostty-theme
 theme = "Solarized Dark - Patched"
 background-opacity = 0.8
 background-blur-radius = 20
 background = #031219
+keybind = ctrl+s=text:tmux-sessionizer.sh\n
+keybind = ctrl+n=text:nvim\n
