--- a/kitty/theme.conf
+++ b/kitty/theme.conf
@@ -1,43 +1,43 @@
-foreground            #839496
-background            #00141a
-selection_foreground  #839496
-selection_background   #d33682
-url_color             #859900
+foreground            #ebfafa
+background            #212337
+selection_foreground  #ebfafa
+selection_background   #d99ffd
+url_color             #04d1f9
 # black
-color0                #00141a
-color8                #cb4b16
+color0                #212337
+color8                #f16c75
 # red
-color1                #dc322f
-color9                #dc322f
+color1                #f16c75
+color9                #f16c75
 # green
-color2                #268bd2
-color10               #268bd2
+color2                #37f499
+color10               #37f499
 # yellow
-color3                #b58900
-color11               #b58900
+color3                #f1fc79
+color11               #f1fc79
 # blue
-color4                #6c71c4
-color12               #6c71c4
+color4                #a48cf2
+color12               #a48cf2
 # magenta
-color5                #dc322f
-color13               #dc322f
+color5                #f265b5
+color13               #f265b5
 # cyan
-color6                #859900
-color14               #859900
+color6                #04d1f9
+color14               #04d1f9
 # white
-color7                #839496
-color15               #839496
+color7                #ebfafa
+color15               #ebfafa
 # Cursor colors
-cursor                #93a1a1
-cursor_text_color     #93a1a1
+cursor                #F712FF
+cursor_text_color     #F712FF
 # Tab bar colors
-active_tab_foreground  #00141a
-active_tab_background   #268bd2
-inactive_tab_foreground #859900
-inactive_tab_background #00141a
+active_tab_foreground  #212337
+active_tab_background   #37f499
+inactive_tab_foreground #04d1f9
+inactive_tab_background #212337
 # Marks
-mark1_foreground      #00141a
-mark1_background      #dc322f
+mark1_foreground      #212337
+mark1_background      #f16c75
 # Splits/Windows
-active_border_color   #6c71c4
-inactive_border_color  #00141a
+active_border_color   #a48cf2
+inactive_border_color  #212337
