Updated neovim configuration

--- a/hypr/configs/variables.conf
+++ b/hypr/configs/variables.conf
@@ -53,6 +53,8 @@ env = XDG_MENU_PREFIX,plasma-
 
 # Set programs that you use
 $terminal = ghostty 
+$bordercolor5 = rgba(2aa198ee) rgba(859900ee) 45deg # Solarized Colors
+$bordercolor4 = rgba(268bd2ee) rgba(2aa198ee) 45deg # blueish
 $bordercolor3 = rgba(df6078FF) rgba(df6078FF) 45deg # pinkish
 $bordercolor2 =$color3
 $bordercolor = $color2
