--- a/hypr/configs/window_rules.conf
+++ b/hypr/configs/window_rules.conf
@@ -85,8 +85,12 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+
+# My custom workspace indicator rules
 windowrulev2 = nofocus,class:com.sd.workspaceindicator
 windowrulev2 = pin,class:com.sd.workspaceindicator
+windowrulev2 = noborder,class:com.sd.workspaceindicator
 windowrulev2 = move 98.3% 97.8%,class:com.sd.workspaceindicator
 # windowrulev2 = rounding 13,class:com.sd.workspaceindicator
 
