--- a/hypr/configs/settings.conf
+++ b/hypr/configs/settings.conf
@@ -31,7 +31,8 @@ general {
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.active_border = $color2
+
+    col.active_border = $bordercolor5
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -42,8 +43,6 @@ general {
 
     layout = dwindle
 }
-
-
 
 
 input {
