--- a/hypr/configs/startup.conf
+++ b/hypr/configs/startup.conf
@@ -18,6 +18,7 @@
 
 exec-once = swww-daemon &
 exec-once = waybar &
+exec-once = workspace-indicator.bin &
 exec-once = nm-applet &
 exec-once = blueman-applet &
 exec-once = hypridle &
