updated starship prompt

--- a/ghostty/config
+++ b/ghostty/config
@@ -6,7 +6,7 @@ window-padding-balance =true
 shell-integration-features = no-cursor
 cursor-style=block
 adjust-cell-height=-2
-confirm-close-surface = true
+confirm-close-surface = false 
 clipboard-read = allow
 clipboard-write = allow
 copy-on-select = true
