--- a/hypr/configs/keybinds.conf
+++ b/hypr/configs/keybinds.conf
@@ -23,7 +23,7 @@
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 bind = $mainMod, W, exec, killall -SIGUSR1 waybar # Toggle hide/show waybar
-bind = $mainMod, Return, exec, /home/shivank/.config/ghostty/ghostty_with_tmux.sh 
+bind = $mainMod, Return, exec, $terminal
 # bind = $mainMod, B, exec, qutebrowser
 # bind = $mainMod SHIFT, B, exec, $browser
 bind = $mainMod, SPACE, exec, pkill rofi || /home/shivank/.config/rofi/scripts/launcher_t1
