Include hardtime plugin for nvim

--- a/hypr/configs/window_rules.conf
+++ b/hypr/configs/window_rules.conf
@@ -52,6 +52,7 @@ windowrulev2 = opacity 1,title:Fake-Lock-Screen
 windowrulev2 = opacity 1,class:mpv
 windowrulev2 = opacity 1,title:^(.*YouTube.*)$
 windowrulev2 = opacity 1,title:^(.*HiMovies.*)$
+windowrulev2 = opacity 1,class:com.obsproject.Studio
 #Some settings for emacs
 # windowrulev2 = opacity 0.9,class:neovide
 windowrulev2 = opacity 1,class:dev.zed.Zed
