--- a/hypr/configs/keybinds.conf
+++ b/hypr/configs/keybinds.conf
@@ -114,23 +114,23 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Emacs programs launched using the key chord SUPER+e followed by 'key'
-bind = $mainMod, E, submap, emacs # will switch to a submap called 'emacs'
-submap = emacs # will start a submap called "emacs"
-# sets repeatable binds for resizing the active window
-binde = , E, exec, $reset $emacs
-binde = , A, exec, $reset $emacs --eval '(emms-play-directory-tree \"~/Music/\")'
-binde = , B, exec, $reset $emacs --eval '(ibuffer)'
-binde = , D, exec, $reset $emacs --eval '(dired nil)'
-binde = , I, exec, $reset $emacs --eval '(erc)'
-binde = , S, exec, $reset $emacs --eval '(eshell)'
-binde = , V, exec, $reset $emacs --eval '(vterm)'
-# binde = , W, exec, $reset $emacs --eval '(eww \"google.com\")'
-binde = , F4, exec, $reset killall emacs
-# use reset to go back to the global submap
-bind = , escape, submap, reset
-# will reset the submap, which will return to the global submap
-submap = reset
+# # Emacs programs launched using the key chord SUPER+e followed by 'key'
+# bind = $mainMod, E, submap, emacs # will switch to a submap called 'emacs'
+# submap = emacs # will start a submap called "emacs"
+# # sets repeatable binds for resizing the active window
+# binde = , E, exec, $reset $emacs
+# binde = , A, exec, $reset $emacs --eval '(emms-play-directory-tree \"~/Music/\")'
+# binde = , B, exec, $reset $emacs --eval '(ibuffer)'
+# binde = , D, exec, $reset $emacs --eval '(dired nil)'
+# binde = , I, exec, $reset $emacs --eval '(erc)'
+# binde = , S, exec, $reset $emacs --eval '(eshell)'
+# binde = , V, exec, $reset $emacs --eval '(vterm)'
+# # binde = , W, exec, $reset $emacs --eval '(eww \"google.com\")'
+# binde = , F4, exec, $reset killall emacs
+# # use reset to go back to the global submap
+# bind = , escape, submap, reset
+# # will reset the submap, which will return to the global submap
+# submap = reset
 
 bind = $mainMod, N, submap, neovide # will switch to a submap called 'neovide'
 submap = neovide # will start a submap called "emacs"
